# cpp-studio

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.slim  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  docker-publish.yml  manifest-check.yml
app/: streamlit_app.py
cli/: cpps.py  praat_match.py  report.py  run_cpps.py  utils.py
data_sample/: ATTRIBUTION.txt  MANIFEST.csv
docs/: EULA.md  README.md  calibration.md
installer/: cpp-studio.iss
praat/: cpps_basic.praat  cpps_batch.praat  cpps_slice.praat
reports/: report_template.tex
scripts/: app_launcher.py  check_manifest.py  cpps_report_entry.py  cpps_run_entry.py  make_release.ps1  make_release.sh
tests/: test_cpps.py  test_praat_match_f0.py
